// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionVideo /> should match the snapshot with video 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  color: unset;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-right: 21px;
  padding-left: 21px;
  border-radius: 5px;
  border-radius: 5px;
  color: unset;
}

.c1:hover {
  background-color: #E9F1FB;
}

.c5 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  visibility: hidden;
  margin-left: 15px;
  cursor: pointer;
  color: unset;
  cursor: pointer;
}

.c6 {
  width: auto;
  height: auto;
}

.c3 {
  position: relative;
  padding-top: 56.25%;
  height: 100%;
  width: 100%;
}

.c4 {
  position: absolute;
  top: 0;
  left: 0;
}

<div
  class="c0"
  width="100%"
>
  <div
    class="c1"
    width="100%"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          style="width: 100%; height: 100%;"
        />
      </div>
      <div
        class="c5"
        visibility="hidden"
      >
        <img
          alt="bin-icon"
          class="c6"
          src="IMAGE_MOCK"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<QuestionVideo /> should match the snapshot without video 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 93px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 93px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c4 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  background-color: transparent;
  border-color: transparent;
  margin-right: 9px;
  height: auto;
  color: #2F3850;
}

.c4:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c4:disabled {
  color: #ABBBD1;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-right: 16px;
  padding-left: 16px;
  background-color: rgba(233,241,251,1);
  color: unset;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div
  class="c0"
  width="100%"
>
  <div
    class="c1"
    height="93"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c3"
      >
        <input
          aria-label="Use videos from YouTube or Vimeo. Paste link here."
          class="c4"
          dir="auto"
          height="auto"
          placeholder="Use videos from YouTube or Vimeo. Paste link here."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
